--- a/SeroPro.css
+++ b/SeroPro.css
@@ -1,147 +1,195 @@
 /* normal */
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 100;
-    font-style: normal;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Thin.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Thin.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Thin.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Thin.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Thin.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Thin.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraLight.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraLight.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraLight.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraLight.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraLight.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraLight.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Light.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Light.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Light.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Light.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Light.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Light.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Regular.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Regular.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Regular.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Regular.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Regular.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Regular.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Medium.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Medium.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Medium.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Medium.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Medium.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Medium.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-SemiBold.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-SemiBold.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-SemiBold.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-SemiBold.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-SemiBold.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-SemiBold.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Bold.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Bold.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Bold.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Bold.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Bold.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-Bold.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 800;
-    font-style: normal;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraBold.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraBold.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraBold.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraBold.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraBold.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroPro-ExtraBold.ttf")
+      format("truetype");
 }
 
 /* italic */
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 100;
-    font-style: italic;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Thin.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Thin.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Thin.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 100;
+  font-style: italic;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Thin.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Thin.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Thin.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 200;
-    font-style: italic;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraLight.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraLight.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraLight.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 200;
+  font-style: italic;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraLight.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraLight.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraLight.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 300;
-    font-style: italic;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Light.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Light.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Light.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Light.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Light.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Light.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 400;
-    font-style: italic;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Regular.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Regular.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Regular.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Regular.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Regular.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Regular.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 500;
-    font-style: italic;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Medium.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Medium.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Medium.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Medium.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Medium.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Medium.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 600;
-    font-style: italic;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-SemiBold.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-SemiBold.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-SemiBold.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-SemiBold.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-SemiBold.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-SemiBold.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 700;
-    font-style: italic;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Bold.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Bold.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Bold.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Bold.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Bold.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-Bold.ttf")
+      format("truetype");
 }
 @font-face {
-    font-family: 'Sero Pro';
-    font-weight: 800;
-    font-style: italic;
-    font-display: swap;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraBold.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraBold.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraBold.ttf') format('truetype');
+  font-family: "Sero Pro";
+  font-weight: 800;
+  font-style: italic;
+  font-display: swap;
+  src: url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraBold.woff2")
+      format("woff2"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraBold.woff")
+      format("woff"),
+    url("https://cdn.jsdelivr.net/gh/fonts-archive/SeroPro/SeroProItalic-ExtraBold.ttf")
+      format("truetype");
 }
